# Discord-Bot-Traductions

./: .gitignore  CHANGELOG.md  INSTALLATION_PROD.md  MIGRATION_TAURI.md  README.md  bot_discord.py  build-tauri.ps1  build-windows.ps1  fly-api.toml  fly-bots.toml  fly.toml  main.js  package-lock.json  package.json  preload.js  publisher_api.py  requirements.txt
.github/workflows/: build-release.yml
Tampermonkey/: Game Data Extractor (Light)-1.0.user.js
Worker cloudflare/: worker.js
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ApiStatusBadge.tsx  AuthModal.tsx  ConfigGateModal.tsx  ConfigModal.tsx  ConfirmModal.tsx  ContentEditor.tsx  DiscordPreviewModal.tsx  ErrorModal.tsx  HelpCenterModal.tsx  HistoryModal.tsx  ImageThumbnail.tsx  InstructionsManagerModal.tsx  MarkdownHelpModal.tsx  Preview.tsx  PreviewImage.tsx  PublicationType.tsx  ShortcutsHelpModal.tsx  StatsModal.tsx  TagSelectorModal.tsx  (+5 more)
python/: README.md  bot_frelon.py  bot_server1.py  bot_server2.py  discord-bots.service  main_bots.py  publisher_api.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
supabase/: config.toml
supabase/migrations/: 20260129160000_initial_schema.sql  20260129170000_profiles_and_auth.sql  20260129200000_editor_permissions.sql  20260129210000_published_posts_comment.sql  20260130230000_remove_template_from_published_posts.sql  20260131230000_tags_category.sql  20260131235900_tags_optimize_schema.sql
supabase/scripts/: nettoyage_integral.sql
(+15 files in other folders)
